Testcases and Exceptions handled